# ontime

./: .gitignore  LICENSE  Makefile  PUBLISH.md  README.md  README.rst  TESTING.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  publish_docs.yml
docs/: conf.py  getting-started.ipynb  getting_started.ipynb  index.rst  run_notebooks.py
docs/_static/: ontime-logo.ai  ontime-logo_wh.ai  ontime-picto.ai
docs/_static/css/: custom.css
docs/contributing/: contribution_guidelines.rst  index.rst  make_a_release.rst
docs/tutorials/: 0_create-an-anomaly-detection-workflow.ipynb  index.rst
docs/user_guide/: index.rst
docs/user_guide/0_core/: 0.0-tests.ipynb  0.1-time-series-custom-class.ipynb  0.1.1_time-series_data-loading.ipynb  0.1_time-series.ipynb  0.2-detectors-generators.ipynb  0.2_detectors.ipynb  0.3_generators.ipynb  0.4-modelling.ipynb  0.4_models.ipynb  0.5-plots.ipynb  0.5_plots.ipynb  0.6-anomaly-frequency.ipynb  0.6_processors.ipynb  0.7-anomaly-time-series-plot.ipynb  0.7_custom-class.ipynb  sample_series.csv
docs/user_guide/1_module/: 0.6-anomaly-frequency.ipynb  0.7-anomaly-time-series-plot.ipynb
docs/user_guide/2_context/: 2.0-context-common.ipynb
notebooks/: demo.ipynb  experiments-fm.ipynb  getting-started.ipynb  run.py
notebooks/.ipynb_checkpoints/: 0.1-getting-started-checkpoint.ipynb  0.2-features-checkpoint.ipynb  0.3-processing-checkpoint.ipynb
notebooks/docs/: 0.0-tests.ipynb  0.1-time-series-custom-class.ipynb  0.2-detectors-generators-models.ipynb  0.2-detectors-generators.ipynb  0.3-functions-windowing-spits.ipynb  0.3-processing.ipynb  0.4-model-libs.ipynb  0.4-modelling-libraries.ipynb  0.4-profile-maker.ipynb  0.4.1-modelling-libraries_preprocessing.ipynb  0.4.2-modelling-libraries_tensorflow.ipynb  0.5-context.ipynb  0.5-plots.ipynb  0.6-plots.ipynb  0.6-vm-anomalies_frequencies.ipynb  0.7-anomaly-frequency.ipynb  0.8-anomaly-time-series-plot.ipynb  Untitled.ipynb
notebooks/docs/0_core/: 0.0-tests.ipynb  0.1-time-series-custom-class.ipynb  0.2-detectors-generators.ipynb  0.3-processing.ipynb  0.4-modelling.ipynb  0.5-plots.ipynb  0.6-anomaly-frequency.ipynb  0.7-anomaly-time-series-plot.ipynb
notebooks/docs/1_module/: 1.1-data-datasets.ipynb  1.2-benchmarking.ipynb
notebooks/docs/2_context/: 2.0-context-common.ipynb
src/ontime/: __init__.py
src/ontime/abstract/: __init__.py  abstract_base_detector.py  abstract_base_generator.py  abstract_base_model.py  abstract_base_processor.py
src/ontime/api/: modular.py
src/ontime/config/: __init__.py  colors.py  constants.py
tests/: test_my_test.py
(+211 files in other folders)
