[tool.poetry]
name = "ontime"
version = "0.7.0"
description = "Your library to work with time series"
authors = ["Fred Montet <fredmontet@gmail.com>"]
readme = "README.md"
packages = [{include = "ontime", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
darts = "^0.30.0"
catboost = "^1.2"
altair = "^5.1.0"
skforecast = "^0.12.0"
torch = ">=2.0.0, !=2.0.1, !=2.1.0"
vegafusion-python-embed = "^1.4.1"
vegafusion = {extras = ["embed"], version = "^1.4.1"}
protobuf = "^4.24.4"
vega-datasets = "^0.9.0"
ipywidgets = "^8.1.1"
altair-viewer = "^0.4.0"
tensorflow = "^2.16.1"
lightning = "^2.2.4"
numpy = "^1.26.4"
calmap = "^0.0.11"
alive-progress = "^3.2.0"
periodicity-detection = "^0.1.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.5"
pre-commit = "^3.3.3"
black = "^23.7.0"
nbmake = "^1.4.6"
pytest-xdist = "^3.5.0"
nbdime = "^4.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.4"
jupyter = "^1.0.0"
papermill = "^2.5.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
nbsphinx = "^0.9.3"
pydata-sphinx-theme = "^0.15.2"
recommonmark = "^0.7.1"
m2r = "^0.3.1"
pandoc = "^2.3"
sphinx-autobuild = "^2021.3.14"
lxml = {extras = ["html-clean"], version = "^5.2.2"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


